# weather_starter

./: AGENTS.md  README.md  biome.json  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  vitest.frontend.config.ts
.agents/skills/create-skill/: SKILL.md
.agents/skills/drizzle-sqlite-migration/: SKILL.md
.agents/skills/frontend-visual-qa/: SKILL.md
.agents/skills/repo-quality-gate/: SKILL.md
.agents/skills/sg-weather-api/: SKILL.md
.agents/skills/weather-feature-workflow/: SKILL.md
.devin/: wiki.json
.jules/: bolt.md  sentinel.md
backend/: package.json
backend/src/: db.ts  server.ts  weather-test.ts  weather.ts
backend/src/routes/: locations.test.ts  locations.ts
docs/: ARCHITECTURE.md  COMMANDS.md  THEMES.md  TYPESCRIPT.md  astro.config.mjs
docs/src/content/docs/: index.mdx
docs/src/content/docs/guides/: adding-locations.md  getting-started.md  weather-data.md
docs/src/content/docs/reference/: api-endpoints.md  configuration.md  database-schema.md  frontend-components.md
docs/src/styles/: landing.css
frontend/: vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AddLocationForm.tsx  Hero.tsx  HourlyStrip.tsx  Layout.tsx  MapCard.tsx  Sidebar.tsx  SidebarCard.tsx  TenDayForecast.tsx  ThemeSelector.tsx  Tiles.tsx
frontend/src/state/: store.bench.tsx  store.tsx  theme.tsx  themeStore.tsx
weather-starter/: main.py  pyproject.toml
